# You must change these to your own details.
[package]
name = "tari_wallet_lib"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_abi = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_bor = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_crypto = { version = "0.20", features = ["borsh"] }

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.0"
console_error_panic_hook = "0.1"
digest = "0.10"
newtype-ops = "0.1.4"
serde = "1.0.126"
serde_json = "1.0"
base64 = "0.21.0"
rand = { version = "0.8" }
blake2 = "0.10.6"
getrandom = { version = "0.2.11", features = ["js"] }
zeroize = "1.*"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[patch."https://github.com/tari-project/tari-dan.git"]
tari_template_lib = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
tari_template_abi = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
tari_bor = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
tari_transaction = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
tari_engine_types = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
tari_dan_common_types = { git = "https://github.com/sdbondi/tari-dan.git", branch = "update-feature-dan2" }
