# You must change these to your own details.
[package]
name = "tari_wallet_lib"
version = "0.1.3"
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_bor = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_builtin = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_wallet_crypto = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_crypto = { version = "=0.20.0", features = ["borsh"] }
indexmap = "2.2.6"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.0"
serde = "1.0.126"
serde_json = "1.0.108"
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.cargo-machete]
ignored = [
    # Implicitly used
    "getrandom",
]
